<resources>
    <string name="app_name">GroceryList</string>
    <string name="username_str">Username</string>
    <string name="pass_str">Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="reg_str">Register</string>
    <string name="emailStr">Email</string>
    <string name="list">Grocery List</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="groceryname">Grocery Name</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>