<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_add"
    android:background="@drawable/img_2"
    tools:context="Navigation.AddList">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/yellow_gold"
        android:textSize="50sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/groceryName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:hint="@string/groceryname"
            android:textStyle="bold"
            android:background="@drawable/box_design" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:hint="@string/groceryname"
            android:textStyle="bold"
            android:inputType="textMultiLine"
            android:layout_below="@+id/groceryName"
            android:background="@drawable/box_design" />

        <Button
            android:id="@+id/addList"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:layout_below="@+id/description"
            android:text="@string/add"
            android:layout_margin="5dp"
            android:background="@color/yellow_gold"
            android:layout_weight="1"
            android:layout_alignEnd="@+id/description"/>

    </RelativeLayout>

</FrameLayout>